Keep vertical scrollbar visible to prevent reflow
(when changing subdivisions)

--- a/src/interpreter/html/style.css
+++ b/src/interpreter/html/style.css
@@ -17,7 +17,7 @@ body {
 
 div#subway {
   -webkit-overflow-scrolling: touch;
-  overflow: auto;
+  overflow: auto scroll;
 }
 
 html, body, div#subway {
